--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-mastermind-minion (0.1) lucid; urgency=low
+mastermind-minion (0.1) unstable; urgency=low
 
   * Initial release
 
- -- Andrey Vasilenkov <indigo@yandex-team.ru>  Fri, 07 Feb 2014 15:05:31 +0400
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Fri, 07 Feb 2014 15:36:02 +0400
