--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.2) unstable; urgency=low
+
+  * Ping http handle
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Tue, 18 Feb 2014 20:23:02 +0400
+
 mastermind-minion (0.1) unstable; urgency=low
 
   * Initial release
