--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.3) unstable; urgency=low
+
+  * Node shutdown dnet ioclient and ubic handler
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Thu, 08 May 2014 11:59:36 +0400
+
 mastermind-minion (0.2) unstable; urgency=low
 
   * Ping http handle
