--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.4) unstable; urgency=low
+
+  * Fix for suprocess classes
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Mon, 12 May 2014 13:41:21 +0400
+
 mastermind-minion (0.3) unstable; urgency=low
 
   * Node shutdown dnet ioclient and ubic handler
