--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.6) unstable; urgency=low
+
+  * Logging command execution params
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Mon, 02 Jun 2014 17:08:49 +0400
+
 mastermind-minion (0.5) unstable; urgency=low
 
   * Fix for subrocess manager group checking
