--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.7) unstable; urgency=low
+
+  * Ubic commands can optionally create marker files with group id
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Mon, 07 Jul 2014 18:17:52 +0400
+
 mastermind-minion (0.6) unstable; urgency=low
 
   * Logging command execution params
