--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.9) unstable; urgency=low
+
+  * Fixed module imports
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Tue, 08 Jul 2014 15:39:16 +0400
+
 mastermind-minion (0.8) unstable; urgency=low
 
   * Group file option and group file marker option can now be parametrized
