--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.10) unstable; urgency=low
+
+  * Minor fixes
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Tue, 08 Jul 2014 16:16:01 +0400
+
 mastermind-minion (0.9) unstable; urgency=low
 
   * Fixed module imports
