--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.11) unstable; urgency=low
+
+  * Optional removal of group files for ubic commands
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Tue, 05 Aug 2014 16:53:37 +0400
+
 mastermind-minion (0.10) unstable; urgency=low
 
   * Minor fixes
