--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.13) unstable; urgency=low
+
+  * Move task fix
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Wed, 20 Aug 2014 17:12:58 +0400
+
 mastermind-minion (0.12) unstable; urgency=low
 
   * Optional move tasks for ubic subprocesses
