--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.14) unstable; urgency=low
+
+  * Dnet client commands
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Wed, 20 Aug 2014 19:32:24 +0400
+
 mastermind-minion (0.13) unstable; urgency=low
 
   * Move task fix
