--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.17) unstable; urgency=low
+
+  * Fix for group checking
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Mon, 25 Aug 2014 15:33:30 +0400
+
 mastermind-minion (0.16) unstable; urgency=low
 
   * Extended checking of node backends list of executing tasks to prevent simultaneous execution
