--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.18) unstable; urgency=low
+
+  * dnet_recovery commands
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Tue, 02 Sep 2014 19:18:57 +0400
+
 mastermind-minion (0.17) unstable; urgency=low
 
   * Fix for group checking
