--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.19) unstable; urgency=low
+
+  * Fix for dnet ioclient subprocesses
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Tue, 02 Sep 2014 19:30:15 +0400
+
 mastermind-minion (0.18) unstable; urgency=low
 
   * dnet_recovery commands
