--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.20) unstable; urgency=low
+
+  * Additional option for path removal on successful rsync
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Wed, 01 Oct 2014 19:00:07 +0400
+
 mastermind-minion (0.19) unstable; urgency=low
 
   * Fix for dnet ioclient subprocesses
