--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.22) unstable; urgency=low
+
+  * Drafts for commands termination
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Tue, 23 Dec 2014 17:46:10 +0300
+
 mastermind-minion (0.21) unstable; urgency=low
 
   * Gzip compression on
