--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.24) unstable; urgency=low
+
+  * Termination of subprocess via os module API
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Wed, 24 Dec 2014 16:31:46 +0300
+
 mastermind-minion (0.23) unstable; urgency=low
 
   * Misprint fixed
