--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.26) unstable; urgency=low
+
+  * Filtering commands list by finish_ts by get parameter finish_ts_gte
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Wed, 14 Jan 2015 15:06:34 +0300
+
 mastermind-minion (0.25) unstable; urgency=low
 
   * Process termination fixed
