--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.27) unstable; urgency=low
+
+  * Force 999 return code of the process which failed to deliver its return code to master process
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Mon, 02 Mar 2015 19:21:22 +0300
+
 mastermind-minion (0.26) unstable; urgency=low
 
   * Filtering commands list by finish_ts by get parameter finish_ts_gte
