--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.28) unstable; urgency=low
+
+  * Use task id parameter to identify subprocess - allows to recover subprocess info in mastermind if failed to save it on mastermind's side
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Mon, 16 Mar 2015 19:14:30 +0300
+
 mastermind-minion (0.27) unstable; urgency=low
 
   * Force 999 return code of the process which failed to deliver its return code to master process
