--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mastermind-minion (0.29) unstable; urgency=low
+
+  * Threshold for rsync percentage
+  * Find running subprocess: only running ones
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Mon, 16 Mar 2015 19:17:30 +0300
+
 mastermind-minion (0.28) unstable; urgency=low
 
   * Use task id parameter to identify subprocess - allows to recover subprocess info in mastermind if failed to save it on mastermind's side
