--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.30) unstable; urgency=low
+
+  * Explicitly finish tornado response, additional logging when failed to construct response
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Wed, 18 Mar 2015 16:11:24 +0300
+
 mastermind-minion (0.29) unstable; urgency=low
 
   * Threshold for rsync percentage
