--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.33) unstable; urgency=low
+
+  * Misprint fixed
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Fri, 27 Mar 2015 20:44:03 +0300
+
 mastermind-minion (0.32) unstable; urgency=low
 
   * Implemented marking and unmarking down backends
