--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.34) unstable; urgency=low
+
+  * Fix for dnet_client success codes checking
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Mon, 30 Mar 2015 17:05:01 +0300
+
 mastermind-minion (0.33) unstable; urgency=low
 
   * Misprint fixed
