--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.35) unstable; urgency=low
+
+  * Minion returns command code along with process exit code
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Mon, 30 Mar 2015 18:32:11 +0300
+
 mastermind-minion (0.34) unstable; urgency=low
 
   * Fix for dnet_client success codes checking
