--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.37) unstable; urgency=low
+
+  * Dependencies added
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Wed, 13 May 2015 13:30:07 +0300
+
 mastermind-minion (0.36) unstable; urgency=low
 
   * Sqlite as a backup commands storage implemented
