--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.38) unstable; urgency=low
+
+  * Package build fixed
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Wed, 13 May 2015 13:42:24 +0300
+
 mastermind-minion (0.37) unstable; urgency=low
 
   * Dependencies added
