--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.39) unstable; urgency=low
+
+  * Command encoding fix
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Wed, 13 May 2015 14:28:50 +0300
+
 mastermind-minion (0.38) unstable; urgency=low
 
   * Package build fixed
