--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.41) trusty; urgency=medium
+
+  * Create and remove group handlers
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Tue, 23 Feb 2016 00:58:27 +0300
+
 mastermind-minion (0.40) unstable; urgency=low
 
   * Creating ids file on demand
