--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.42) trusty; urgency=medium
+
+  * Fix for create and remove group handlers
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Thu, 25 Feb 2016 16:07:05 +0300
+
 mastermind-minion (0.41) trusty; urgency=medium
 
   * Create and remove group handlers
