--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.44) trusty; urgency=medium
+
+  * Add handler for executing dnet_client command
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Fri, 26 Feb 2016 00:35:15 +0300
+
 mastermind-minion (0.43) trusty; urgency=medium
 
   * Fix for create and remove group handlers
