--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.46) trusty; urgency=medium
+
+  * Fix for running dnet_client backend command
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Sun, 28 Feb 2016 19:04:38 +0300
+
 mastermind-minion (0.45) trusty; urgency=medium
 
   * Change variable names to comply with parameter names
