--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.49) trusty; urgency=medium
+
+  * Skip renaming error on group removal if destination path exists
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Sun, 28 Feb 2016 21:43:55 +0300
+
 mastermind-minion (0.48) trusty; urgency=medium
 
   * Support dnet_client codes in dnet_client backend command
