--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.50) trusty; urgency=medium
+
+  * Add lrc_convert command
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Wed, 11 May 2016 16:53:38 +0300
+
 mastermind-minion (0.49) trusty; urgency=medium
 
   * Skip renaming error on group removal if destination path exists
