--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.51) trusty; urgency=medium
+
+  * Add lrc_validate command
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Fri, 13 May 2016 14:25:09 +0300
+
 mastermind-minion (0.50) trusty; urgency=medium
 
   * Add lrc_convert command
