--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.52) trusty; urgency=medium
+
+  * Add support of environment variables through HTTP headers
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Thu, 30 Jun 2016 15:03:11 +0300
+
 mastermind-minion (0.51) trusty; urgency=medium
 
   * Add lrc_validate command
