--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.53) trusty; urgency=medium
+
+  * Force env variables to upper register
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Thu, 30 Jun 2016 15:54:35 +0300
+
 mastermind-minion (0.52) trusty; urgency=medium
 
   * Add support of environment variables through HTTP headers
