--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.54) trusty; urgency=medium
+
+  * Add configurable per-command env variables
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Mon, 04 Jul 2016 15:49:02 +0300
+
 mastermind-minion (0.53) trusty; urgency=medium
 
   * Force env variables to upper register
