--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.57) trusty; urgency=medium
+
+  * Add support for mds_cleanup (aka langoliers)
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Mon, 12 Sep 2016 17:07:42 +0300
+
 mastermind-minion (0.56) trusty; urgency=medium
 
   * Add configurable per-command env variables
