--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.66) trusty; urgency=medium
+
+  * Allow storing core dumps for child processes
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Wed, 16 Nov 2016 20:10:40 +0300
+
 mastermind-minion (0.65) trusty; urgency=medium
 
   * Update lrc commands to use base subprocess facilities
