--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (0.68) trusty; urgency=medium
+
+  * UbicSubprocess: create stop file
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Thu, 08 Dec 2016 13:33:07 +0300
+
 mastermind-minion (0.67) trusty; urgency=medium
 
   * Remove syslog-ng restart in postinst script
