--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (1.3) trusty; urgency=medium
+
+  * Store and output artifacts along with command status
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Mon, 12 Dec 2016 22:50:27 +0300
+
 mastermind-minion (1.2) trusty; urgency=medium
 
   * Collect artifacts from lrc_convert and lrc_validate commands
