--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (1.4) trusty; urgency=medium
+
+  * Fix package build
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Mon, 12 Dec 2016 23:03:05 +0300
+
 mastermind-minion (1.3) trusty; urgency=medium
 
   * Store and output artifacts along with command status
