--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (1.5) trusty; urgency=medium
+
+  * Determine exec path from command itself
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Mon, 12 Dec 2016 23:38:42 +0300
+
 mastermind-minion (1.4) trusty; urgency=medium
 
   * Fix package build
