--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (1.7) trusty; urgency=medium
+
+  * Dump artifacts to db
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Tue, 13 Dec 2016 00:04:43 +0300
+
 mastermind-minion (1.6) trusty; urgency=medium
 
   * Fix misprint
