--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mastermind-minion (1.8) trusty; urgency=medium
+
+  * Check task id against completed commands as well
+  * Parse recover dc output to more suitable format
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Fri, 23 Dec 2016 13:59:24 +0300
+
 mastermind-minion (1.7) trusty; urgency=medium
 
   * Dump artifacts to db
