--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (1.10) trusty; urgency=medium
+
+  * Add lrc_recover command
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Tue, 24 Jan 2017 17:48:36 +0300
+
 mastermind-minion (1.9) trusty; urgency=medium
 
   * Fix for checking task id against completed commands as well
