--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (1.12) trusty; urgency=medium
+
+  * Create backend stop file if move_path failed
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Wed, 01 Feb 2017 12:28:01 +0300
+
 mastermind-minion (1.11) trusty; urgency=medium
 
   * Add handler for executing commands
