--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (1.15) trusty; urgency=medium
+
+  * Write path in stop file
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Fri, 10 Feb 2017 17:30:17 +0300
+
 mastermind-minion (1.14) trusty; urgency=medium
 
   * Create backend_stop file if create_file_marker/remove_group_file failed
