--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (1.17) trusty; urgency=medium
+
+  * Use group id in removed backend path
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Mon, 13 Feb 2017 17:04:21 +0300
+
 mastermind-minion (1.16) trusty; urgency=medium
 
   * Fix remove group handler, should stop execution if failed to rename
