--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (1.18) trusty; urgency=medium
+
+  * Debug logging added
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Tue, 28 Feb 2017 13:55:03 +0300
+
 mastermind-minion (1.17) trusty; urgency=medium
 
   * Use group id in removed backend path
