--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (1.25) trusty; urgency=medium
+
+  * Add backend path artifacts to create group command
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Thu, 07 Sep 2017 17:27:58 +0300
+
 mastermind-minion (1.24) trusty; urgency=medium
 
   * Fix misprint in order of arguments
