--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (1.31) trusty; urgency=medium
+
+  * Fix parsing of rsync command output
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Mon, 23 Oct 2017 15:37:00 +0300
+
 mastermind-minion (1.30) trusty; urgency=medium
 
   * Add artifacts to dnet_client commands
