--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+mastermind-minion (1.35) trusty; urgency=medium
+
+  * Add delete_backend_dir option to remove group command
+  * Add check group location command
+  * Add test ping command
+  * Make commands execution asynchronous
+  * Make handlers asynchronous
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Mon, 26 Feb 2018 16:14:51 +0300
+
 mastermind-minion (1.34) trusty; urgency=medium
 
   * Account unavailable_groups to artifacts of recovery job
