--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (1.36) trusty; urgency=medium
+
+  * Disable backend dir removal
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Tue, 27 Feb 2018 16:32:11 +0300
+
 mastermind-minion (1.35) trusty; urgency=medium
 
   * Add delete_backend_dir option to remove group command
