--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind-minion (1.38) trusty; urgency=medium
+
+  * Fix misprint
+
+ -- Andrey Vasilenkov <indigo@yandex-team.ru>  Wed, 14 Mar 2018 12:18:54 +0300
+
 mastermind-minion (1.37) trusty; urgency=medium
 
   * Add monitor port request timeout configuration
